--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "index.js"
   ],
   "scripts": {
-    "test": "standard && brittle test.mjs"
+    "format": "prettier --write .",
+    "lint": "prettier --check .",
+    "test": "brittle test.mjs"
   },
   "repository": {
     "type": "git",
@@ -24,11 +26,7 @@
   },
   "devDependencies": {
     "brittle": "^3.1.0",
-    "standard": "^17.0.0"
-  },
-  "standard": {
-    "ignore": [
-      "__snapshots__/**"
-    ]
+    "prettier": "^3.6.2",
+    "prettier-config-holepunch": "^1.0.0"
   }
 }
